<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/auto_margin"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/detail_item_margin">

        <TextView
            android:id="@+id/tvDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/detail_fragment_item_today"
            android:textSize="30dp"
            android:textStyle="bold" />

    </RelativeLayout>


    <include
        android:id="@+id/inLayout"
        layout="@layout/fragment_add_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/auto_margin">

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/margin_ten"
            android:background="@drawable/custom_button_save"
            android:text="@string/remove"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnModify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_button_save"
            android:text="@string/Modify"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/margin_ten"
            android:background="@drawable/custom_button_save"
            android:text="@string/close"
            android:textAllCaps="false" />
    </RelativeLayout>
</LinearLayout>
